name:                pid
version:             0.0.0.0
homepage:            https://github.com/steven741/CarND-PID-Control-Project
license:             BSD2
license-file:        License
author:              Steven A. Watson
maintainer:          16228203+steven741@users.noreply.github.com
copyright:           2017 Steven A. Watson
category:            Robotics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  Readme.md

executable pid
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base,
    vector,
    bytestring,
    aeson,
    websockets
